--- a/day1_intro_basic.ipynb
+++ b/day1_intro_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "day1 intro basic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNiD4epFvozMIL1oScwQTlZ",
+      "authorship_tag": "ABX9TyPugPd3pmxK2LY/KzC8RA7z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,29 @@
             "If the implementation is hard to explain, it's a bad idea.\n",
             "If the implementation is easy to explain, it may be a good idea.\n",
             "Namespaces are one honking great idea -- let's do more of those!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\" github replacement\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5mpwG-ElT3V5",
+        "outputId": "55465142-d1cd-447f-e7b6-68c82ee99f00"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " github replacement\n"
           ]
         }
       ]
