--- a/day1_intro_basic.ipynb
+++ b/day1_intro_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "day1 intro basic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPugPd3pmxK2LY/KzC8RA7z",
+      "authorship_tag": "ABX9TyMFBkeajbRU5bLF8xotbqvT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,6 +103,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# home\n"
+      ],
+      "metadata": {
+        "id": "fCkpNeCJVdZ5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\" github replacement\")"
@@ -124,6 +133,118 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(\" hello there\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r0BFYRL2YAQ9",
+        "outputId": "c9fd4f59-a06d-41d5-88f6-bddcb188ebaa"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = ('general kanobi')"
+      ],
+      "metadata": {
+        "id": "AuEpGChgYKZZ"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "vCnP7JQZYagt",
+        "outputId": "7c3bac88-3fad-4300-d5f3-b09dbb43342e"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'general kanobi'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "String Indexing\n",
+        "\n",
+        "we know strings are sequence, which mean python can used indexes to call part of the sequence. ltes learn how this works in python. we use bracket[] after an objects to call its index.  we should also note that indexing start at 0 for python. ltes create anew objectx called and the walk throught a few examples of indexing"
+      ],
+      "metadata": {
+        "id": "Z8hTPVmuZn2N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"gggg\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C5lb6i2lapx1",
+        "outputId": "0058dbea-6985-4515-ba0f-451aa802f10c"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gggg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "cpw3CtwZbIRK"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
