--- a/Day_4_Functions.ipynb
+++ b/Day_4_Functions.ipynb
@@ -70,38 +70,20 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "camelCase\n",
-        "PascalCase\n",
-        "_variable\n",
-        "\n",
-        "name_of_function()\n",
-        "any_name_you_want()\n",
-        "\n",
-        "cars = ['oranges', 'bananas']\n",
-        "temp_conv()"
-      ],
-      "metadata": {
-        "id": "bbmnu1pezeGb"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "def greeting():\n",
         "  \"\"\"\n",
-        "  Author: who did this function\n",
-        "  Input: what argument the functions takes.\n",
-        "  Output: this function displays a greeting\n",
-        "  this is function display a greeting\n",
+        "  Author: who did this function.\n",
+        "  Input: What argiumrents the function takes.\n",
+        "  Output: This function displays a greeting\n",
         "  \"\"\"\n",
-        "  print('hi there')"
+        "  print('Hi there')"
       ],
       "metadata": {
-        "id": "AzZ4pBPqzeDs"
+        "id": "bbmnu1pezeGb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,19 +92,19 @@
         "greeting()"
       ],
       "metadata": {
-        "id": "j3ICAuHzzeAy",
-        "outputId": "bc39ab64-a7e0-4c2c-a45e-7c27a9322c86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AzZ4pBPqzeDs",
+        "outputId": "a56722d4-0788-44e5-db65-b65a50441cb8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hi there\n"
+            "Hi there\n"
           ]
         }
       ]
@@ -130,27 +112,16 @@
     {
       "cell_type": "code",
       "source": [
-        "??greeting()"
+        "help(greeting)\n"
       ],
       "metadata": {
-        "id": "wWbm-FANzd93"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "help(greeting)"
-      ],
-      "metadata": {
-        "id": "sqekHOxZzd7G",
-        "outputId": "f77f911e-3e0d-4bba-ddf1-2c37dc0f2ae1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j3ICAuHzzeAy",
+        "outputId": "341040da-6f75-46e9-e130-68cd07872f12"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,10 +130,9 @@
             "Help on function greeting in module __main__:\n",
             "\n",
             "greeting()\n",
-            "    Author: who did this function\n",
-            "    Input: what argument the functions takes.\n",
-            "    Output: this function displays a greeting\n",
-            "    this is function display a greeting\n",
+            "    Author: who did this function.\n",
+            "    Input: What argiumrents the function takes.\n",
+            "    Output: This function displays a greeting\n",
             "\n"
           ]
         }
@@ -171,201 +141,146 @@
     {
       "cell_type": "code",
       "source": [
-        "def sayhello():\n",
-        "  \"\"\"\n",
-        "  author: Tumade Danso.\n",
-        "  this functions is to say hello!\n",
-        "  \"\"\"\n",
-        "  print('Hello there')"
+        "def add_num(x,y):\n",
+        "    return x+y"
       ],
       "metadata": {
-        "id": "hHBZ8g3_zd3g"
+        "id": "wWbm-FANzd93"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sayhello()"
+        "add_num(3, 6)"
       ],
       "metadata": {
-        "id": "kU7e3J7tzd0C",
-        "outputId": "d8aac0d8-873e-43ad-f7d8-64ba15ff60f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sqekHOxZzd7G",
+        "outputId": "29a7dee1-4804-4d93-b40c-4f6b645405c2"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello there\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "??sayhello()"
-      ],
-      "metadata": {
-        "id": "o9B-PHqezdw9"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def add_num(num1, num2):\n",
-        "  return num1+num2"
-      ],
-      "metadata": {
-        "id": "MsbNKqlb6WGo"
-      },
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "add_num(20, 60)"
-      ],
-      "metadata": {
-        "id": "k8WexCoo9RmI",
-        "outputId": "09f85824-669b-433f-b240-4101d5b4b6ee",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "80"
+              "9"
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def sub_num(num1, num2):\n",
-        "  return num1-num2"
+        "add_num('d', 'g')"
       ],
       "metadata": {
-        "id": "2NvDjukH9Vgx"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sub_num(1, 45)"
-      ],
-      "metadata": {
-        "id": "WPfZ2IAN9c9y",
-        "outputId": "391372ec-5682-48b5-e2b5-012a199255f4",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "hHBZ8g3_zd3g",
+        "outputId": "59cba3eb-ae77-42d4-baaa-f31eb79c0f39"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
             "text/plain": [
-              "-44"
+              "'dg'"
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 15
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "\n",
-        "# calculator by function\n",
-        " # add\n",
-        "def add(num1, num2):\n",
-        "    return num1 + num2\n",
-        "   # sub\n",
-        "def subtract(num1, num2):\n",
-        "    return num1 - num2\n",
-        "  # multiply\n",
-        "def multiply(num1, num2):\n",
-        "    return num1 * num2\n",
-        "  #division\n",
-        "def divide(num1, num2):\n",
-        "    return num1 / num2\n",
-        "\n",
-        "    num1 = int(input())\n",
-        "    num2 = int(input())\n",
-        "    result = num1 + num1, num1 - num2, num1 / num2, num1 * num2\n",
-        "# print('here is result:' + input(), input()) \n",
-        "  \n",
-        "#print(result)"
+        "#Write simple calculator!"
       ],
       "metadata": {
-        "id": "iZ9JHClx9kDJ"
-      },
-      "execution_count": 51,
-      "outputs": []
+        "id": "kU7e3J7tzd0C"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "# Simple Calculator\n",
         "\n",
-        "operation=int(input(\"what operation do you want?\\n \\\n",
-        "1.Add\\n 2.Sub\\n 3.Multiply\\n 4.Division\\n\"))\n",
-        "num1 = int(input(\"enter first number\"))\n",
-        "num2 = int(input(\"enter second number\"))\n",
-        "if(operation==1):\n",
-        "  print(\"Add is:\",str(num1+num2))\n",
-        "elif(operation==2):\n",
-        "  print(\"Sub is:\",str(num1-num2))\n",
-        "elif(operation==3):\n",
-        "  print(\"Multiply is:\",str(num1*num2))\n",
-        "elif(operation==4):\n",
-        "  print(\"Divided is:\",str(num1/num2))\n",
-        " # else:\n",
-        "  #  print(\" wrong entry\")\n"
+        "def add(x, y): \n",
+        "   return x + y\n",
+        " \n",
+        "def subtract(x, y):\n",
+        "   return x - y\n",
+        " \n",
+        "def multiply(x, y):\n",
+        "   return x * y\n",
+        " \n",
+        "def divide(x, y):\n",
+        "   return x / y\n",
+        " \n",
+        "# Take input from the user\n",
+        "\n",
+        "print(\"Select operation \")\n",
+        "print(\"1: Add\")\n",
+        "print(\"2: Subtract\")\n",
+        "print(\"3: Multiply\")\n",
+        "print(\"4: Divide\")\n",
+        " \n",
+        "choice = input(\"Enter choice(1/2/3/4):\")\n",
+        " \n",
+        "num1 = int(input(\"Enter first number: \"))\n",
+        "num2 = int(input(\"Enter second number: \"))\n",
+        " \n",
+        "if choice == '1':\n",
+        "   print(num1,\"+\",num2,\"=\", add(num1,num2))\n",
+        " \n",
+        "elif choice == '2':\n",
+        "   print(num1,\"-\",num2,\"=\", subtract(num1,num2))\n",
+        " \n",
+        "elif choice == '3':\n",
+        "   print(num1,\"*\",num2,\"=\", multiply(num1,num2))\n",
+        " \n",
+        "elif choice == '4':\n",
+        "   print(num1,\"/\",num2,\"=\", divide(num1,num2))\n",
+        "else:\n",
+        "   print(\"Invalid input\")"
       ],
       "metadata": {
-        "id": "XWQi-TNdJsDv",
-        "outputId": "72695ab5-1d8d-49ab-a367-f5e06dd36df2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o9B-PHqezdw9",
+        "outputId": "4bf4d021-985d-4300-9645-597cc2010b44"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what operation do you want?\n",
-            " 1.Add\n",
-            " 2.Sub\n",
-            " 3.Multiply\n",
-            " 4.Division\n",
-            "3\n",
-            "enter first number90\n",
-            "enter second number6\n",
-            "Multiply is: 540\n"
+            "Select operation \n",
+            "1: Add\n",
+            "2: Subtract\n",
+            "3: Multiply\n",
+            "4: Divide\n",
+            "Enter choice(1/2/3/4):1\n",
+            "Enter first number: 2\n",
+            "Enter second number: 3\n",
+            "2 + 3 = 5\n"
           ]
         }
       ]
@@ -375,38 +290,37 @@
       "source": [
         "def greeting(fname, lname, age):\n",
         "  \"\"\"\n",
-        "  Author: who did this function\n",
-        "  Input: what argument the functions takes.\n",
-        "  Output: this function displays a greeting\n",
-        "  this is function display a greeting\n",
+        "  Author: who did this function.\n",
+        "  Input: What argiumrents the function takes.\n",
+        "  Output: This function displays a greeting\n",
         "  \"\"\"\n",
-        "  print(f'hi there{fname}, {lname}... you are {age} years old')"
+        "  print(f'Hi there {fname}, {lname}... You are are {age} years old')"
       ],
       "metadata": {
-        "id": "dHOt4hvFd_JR"
+        "id": "XEMVbaULSKMC"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "greeting(' general', ' kenobi', '80')"
+        "greeting('General', 'Kenobi', 87)"
       ],
       "metadata": {
-        "id": "0YoC4JFDeXRv",
-        "outputId": "ac4f6a7a-6994-4d5a-ce0f-cae71b43491c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7AIXtmS3eN6q",
+        "outputId": "7013ff40-e9e9-4ede-c589-b06111f8f422"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hi there general,  kenobi... you are 80 years old\n"
+            "Hi there General, Kenobi... You are are 87 years old\n"
           ]
         }
       ]
@@ -414,95 +328,100 @@
     {
       "cell_type": "code",
       "source": [
-        "add_num(9,100)"
+        "add(4,6)"
       ],
       "metadata": {
-        "id": "RaIYJmTxfOwk",
-        "outputId": "f73ef729-d598-4bad-f964-009e2f02bec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nl3RrUqmeSPv",
+        "outputId": "6564f616-7bad-4f81-ef42-ce9a62f4e3e8"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-91"
+              "10"
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def greeting(name=\"Maddy\"):\n",
+        "def greeting3(name='Mark'):\n",
         "  \"\"\"\n",
-        "  Author: who did this function\n",
-        "  Input: what argument the functions takes.\n",
-        "  Output: this function displays a greeting\n",
-        "  this is function display a greeting\n",
+        "  Author: who did this function.\n",
+        "  Input: What argiumrents the function takes.\n",
+        "  Output: This function displays a greeting\n",
         "  \"\"\"\n",
-        " # print(f'hi there{fname}, {lname}... you are {age} years old')\n",
-        "  print(f\"hello, {name}\")\n",
-        "\n"
+        "  print(f'Hi there {name}')"
       ],
       "metadata": {
-        "id": "Lqnq9cBGfPcu"
+        "id": "EIYCNjOoe_eJ"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "   \n",
-        "def prime(lower_num, upper_num):\n",
-        "   # lower_num= int(input(\"enter lower number\")) \n",
-        "   # upper_num= int(input(\"enter upper number\"))\n",
-        "    lower = 0\n",
-        "    upper = 100\n",
-        "    for num in range(lower,upper + 1):  \n",
-        "      if num > 1:  \n",
-        "          for i in range(2,num):  \n",
-        "              if (num % i) == 0:  \n",
-        "                  break  \n",
-        "          else:  \n",
-        "              print(num)  \n",
-        "    prime(1,200)"
+        "greeting3('Peter')"
       ],
       "metadata": {
-        "id": "ujAHhJYgfPNS"
-      },
-      "execution_count": 134,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f\" these are prime numbers, {prime}\")"
-      ],
-      "metadata": {
-        "id": "FfU1DdGLhPej",
-        "outputId": "8dd6b234-b8fd-414c-b956-9f326613be4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r-M61ADpfS1o",
+        "outputId": "dde223dc-1c59-4140-db3c-4cadd862ba16"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " these are prime numbers, <function prime at 0x7f460b260b00>\n"
+            "Hi there Peter\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greeting3()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qbr5sXrmfUPl",
+        "outputId": "40cf7e01-046a-41f5-a5b1-fbfc8ca5b7a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi there Mark\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Write a function that checks if a number is prime!"
+      ],
+      "metadata": {
+        "id": "eK9nI7Sufpnu"
+      }
     }
   ]
 }
